Closed Bug 335039 Opened 19 years ago Closed 19 years ago

nssCKFWCryptoOperation_UpdateCombo is not declared

Categories

(NSS :: Libraries, defect, P2)

defect

Tracking

(Not tracked)

RESOLVED FIXED

People

(Reporter: julien.pierre, Assigned: julien.pierre)

Details

Attachments

(1 file)

I wish there was a way to get the compiler to treat this as a build error rather than a warning. ckfw/session.c references this function without a prototype. This can wreak havoc on some architectures depending on the type assumptions made by the compiler. Patch forthcoming.
Priority: -- → P2
Target Milestone: --- → 3.12
Attached patch declare functionSplinter Review
Assignee: nobody → julien.pierre.bugs
Status: NEW → ASSIGNED
Attachment #219398 - Flags: review?(rrelyea)
GCC has the -Werror-implicit-function-declaration flag, which is what you wanted. In fact I was planning to suggest that we use this flag.
Attachment #219398 - Flags: review?(rrelyea) → review+
I second that motion! use -Werror-implicit-function-declaration, at least on 64-bit builds.
Thanks for the review, Wan-Teh. I agree that we should use that gcc flag on all the platforms that have it. Has it been available in gcc for a long time or is it a recent addition ? Checking in ckfw.h; /cvsroot/mozilla/security/nss/lib/ckfw/ckfw.h,v <-- ckfw.h new revision: 1.9; previous revision: 1.8 done Checking in crypto.c; /cvsroot/mozilla/security/nss/lib/ckfw/crypto.c,v <-- crypto.c new revision: 1.3; previous revision: 1.2 done
Status: ASSIGNED → RESOLVED
Closed: 19 years ago
Resolution: --- → FIXED
Attachment #219398 - Flags: superreview+
Julien, I found -Werror-implicit-function-declaration documented in the oldest version of GCC (2.95.3) on the GCC documentation site: http://gcc.gnu.org/onlinedocs/ See http://gcc.gnu.org/onlinedocs/gcc-2.95.3/gcc_2.html#SEC8, search for "-Werror-implicit-function-declaration". So it should be safe to just use this flag whenever we compile with GCC.
You need to log in before you can comment on or make changes to this bug.

Attachment

General

Creator:
Created:
Updated:
Size: