Fix for bug 335039. Declare nssCKFWCRyptoOperation_UpdateCombo. r=wtchang